Readme Demonstration script

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ require(ggplot2)
 options(mc.cores=parallel::detectCores())
 
 rm(list=ls())
-set.seed(123)
+set.seed(1)
 
 ```
 ---
@@ -142,43 +142,9 @@ sum(summary(fit3)$summary[,"Rhat"] > 1.01)
 
 ```
 
-#### Compile results for fit 2 
+#### Compile results  
 
 ```{r,cache = TRUE}
-
-# Interpretation below is relevant only if signs of convergence in MCMC are observed
-# Only focusing on the parameters from the fit 3 above
-
-
-# Histogram ofposterior distribtion compared with true value 
-plotHist <- function(fit, param, trueValue, range = NA, label = ""){
-  # Extract posteiror simulation 
-  post <- rstan::extract(fit, pars =  c(eval(param)), permuted = TRUE, inc_warmup = FALSE)
-  sim <- post[[1]]
-  
-  # Plot 
-  p <- ggplot() + aes(sim)+ 
-    geom_histogram(fill="grey", color="white") + 
-    theme_classic() +  
-    geom_vline(xintercept = trueValue, lty = 5) + 
-    xlab(label) + ylab("") +
-    theme(axis.text = element_text(size = 12))
-  
-  # Range of X axist if needed
-  if(!is.na(range)){
-    p <- p + scale_x_continuous(limits=c(range[1],range[2]))  
-  }
-  return(p)
-}
-
-plotList <- list()
-plotList[[1]] <- plotHist(fit3,  param = "sigma_alpha", trueValue = sigma_alphaLevel, label = expression(sigma[alpha]))
-plotList[[2]] <- plotHist(fit3,  param = "sigma_V", trueValue = sigma_Y, label = expression(sigma[Y]))
-
-cowplot::plot_grid(plotlist = plotList, ncol = 2, labels = "auto", label_fontface = "plain")
-
-
-
 
 ### Generate Impuse response function from fit 
 post <- rstan::extract(fit3, pars =  c("beta", "lambda"), permuted = TRUE, inc_warmup = FALSE)
@@ -218,18 +184,6 @@ p + geom_line(aes(y = lagTrue, colour = "red"), linetype="dashed")
  lines(hi, lty = "dotted")
  lines(median, type = "l", lwd = 1)
  title(main = "Predictive distribution of and observed Y \n Fitted mean:solid line, 95% credible interval: dotted line, overved Y: cross ")
- 
-# Compare posteior of alpha and true values  
-params <- rstan::extract(fit3, pars = "alpha")
-mean <- apply(params$alpha, 2, mean)
-lo <- apply(params$alpha, 2, quantile, 0.025)
-hi <- apply(params$alpha, 2, quantile, 0.975)
-plot(lo, type = "l", lty = "dotted", ylim = range(c(mean, lo, hi)), ylab = expression(alpha[t]), xlab = "Time")
-points(alpha, pch = 3, cex = 0.5, col = "blue")
-lines(hi, lty = "dotted")
-lines(mean, type = "l", lwd = 1)
-title(main = "Estimated (solid line) and true (dot) value of stochastic intercept \n and 95% credible interval (dotted line)")
-
 
 
 
